[gd_scene load_steps=2 format=2]

[ext_resource path="res://Entities/ProjectileHandler/ProjectileHandler.gd" type="Script" id=1]

[node name="ProjectileHandler" type="Node2D"]
script = ExtResource( 1 )

[node name="ProjectileContainer" type="Node2D" parent="."]

[node name="TimerContainer" type="Node2D" parent="."]
